--- a/Join.html
+++ b/Join.html
@@ -99,7 +99,7 @@
 
             </div>
           <div class="footerListWords">
-            <a href="https://www.ted.com/about/programs-initiatives/tedx-program">TEDx</a>
+            <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx</a>
             <a href="Join.html">Become a member</a>
             <a href="http://www.ted.com/" target="_blank">TED</a>
           </div>
@@ -107,8 +107,8 @@
         <div class="columnTwo">
           <div class="footerList">
             <a href="http://www.ted.com/" target="_blank">This independent TEDx event is operated under license from TED.</a>
-          </div>
-          <p> &#169; 2016 Designed and developed by Jessica Tang and Aaron Grode.</p>
+            <p> &#169; 2016 Designed and developed by Jessica Tang and Aaron Grode.</p>
+           </div>
         </div>
       </div>
   </div>
