--- a/About.html
+++ b/About.html
@@ -47,14 +47,12 @@
     <h1>About us</h1>
 </div>
 <body>
-  <div class="videoBackgroundAbout">
     <h2>What is <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx?</a></h2>
         <iframe
             src="https://www.youtube.com/embed/N-l1xtCMnpw" frameborder="0" allowfullscreen>
         </iframe>
-  </div>
   <div class ="aboutBody">
-    <h2>Meet the exec board</h2>
+    <h1>Meet the exec board</h1>
     <h2>Click <a href="Exec_bios.html">HERE</a> to learn more about the exec board!</h2>
     <ul class="execContainer">
     <a href="Exec_bios.html#bio1">
@@ -71,30 +69,19 @@
      <a href="Exec_bios.html#bio6"><li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
   </ul>
-    <h2>About TEDx, x = independently organized event</h2>
+<!--     <h2>About TEDx, x = independently organized event</h2>
     <p>In the spirit of ideas worth spreading, TEDx is a program of local, 
       self-organized events that bring people together to share a TED-like experience.
       At a TEDx event, TED Talks video and live speakers combine to spark deep discussion 
       and connection. These local, self-organized events are branded TEDx, where x = independently
       organized TED event. The TED Conference provides general guidance for the TEDx program, but 
       individual TEDx events are self-organized. (Subject to certain rules and regulations.)
-    </p>
+    </p> -->
 
     <h2>About TED</h2>
     <div class="aboutTed">
-    <p>TED is a nonprofit organization devoted to Ideas Worth Spreading. Started as a four-day 
-      conference in California 30 years ago, TED has grown to support its mission with multiple <img src="tedAbout.png">
-      initiatives. The two annual TED Conferences invite the world's leading thinkers and doers to 
-      speak for 18 minutes or less. Many of these talks are then made available, free, at TED.com. 
-      TED speakers have included Bill Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, 
-      Nandan Nilekani, Philippe Starck, Ngozi Okonjo-Iweala, Sal Khan and Daniel Kahneman.
-      The annual TED Conference takes place each spring in Vancouver, British Columbia. TED's media initiatives
-      include TED.com, where new TED Talks are posted daily; the Open Translation Project, which provides 
-      subtitles and interactive transcripts as well as translations from volunteers worldwide; the educational
-      initiative TED-Ed. TED has established the annual TED Prize, where exceptional individuals with a wish 
-      to change the world get help translating their wishes into action; TEDx, which supports individuals or 
-      groups in hosting local, self- organized TED-style events around the world, and the TED Fellows program, 
-      helping world-changing innovators from around the globe to amplify the impact of their remarkable projects and activities.
+      <img src="tedAbout.png">
+    <p>TED is a nonprofit devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or less). TED began in 1984 as a conference where Technology, Entertainment and Design converged, and today covers almost all topics — from science to business to global issues — in more than 100 languages. Meanwhile, independently run TEDx events help share ideas in communities around the world.
       Follow TED on <a href="http://twitter.com/TEDTalks" target="_blank">Twitter</a>, or on <a href="http://www.facebook.com/TED" target="_blank">Facebook</a>.
     </p>
     </div>
