--- a/index.html
+++ b/index.html
@@ -48,13 +48,11 @@
 </div>
 <body>
   <h2>What is <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx?</a></h2>
-      <div class="videoBackground">
-        <h2>Watch our video to learn more</h2>
-        <video controls>
-          <source src="TEDxUWMadison.mp4" type="video/mp4">
-          <source src="TEDxUWMadison.ogg" type="video/ogg">
-        </video>
-     </div>
+        <!-- <h2>Watch our video to learn more</h2> -->
+         <div class="fav_talk"><iframe 
+            src="https://www.youtube.com/embed/GGUIhVZ6lrY" frameborder="0" allowfullscreen>
+        </iframe></div>
+  <br><br>
 <div class="backgroundIMG">
   <h3><span>In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local, 
   self-organized events that bring people together to share a TED-like experience. Our event is called TEDxUWMadison,
