--- a/index.html
+++ b/index.html
@@ -54,11 +54,7 @@
         </iframe></div>
   <br><br>
 <div class="backgroundIMG">
-  <h3><span>In the spirit of ideas worth spreading, TED has created a program called TEDx. TEDx is a program of local, 
-  self-organized events that bring people together to share a TED-like experience. Our event is called TEDxUWMadison,
-  where x = independently organized TED event. At our TEDxUWMadison event, TEDTalks video and live speakers will 
-  combine to spark deep discussion and connection in a small group. The TED Conference provides general guidance
-  for the TEDx program, but individual TEDx events, including ours, are self-organized.
+  <h3><span>In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. These local, self-organised events are branded TEDx, where x = independently organized TED event.
   </span></h3>
   
   <img src="mainBackIMG.jpg">
