mobile edits, add one more exec

--- a/Join.html
+++ b/Join.html
@@ -65,7 +65,7 @@
       TED talk and more! TEDxUWMadison's opportunities are endless and we would love to add more members to our community.</p>
 
     <h4>Member Dues:</h4>
-    <div class ="twoColumnFlexHorizontal">
+    <div class ="twoColumnFlexHorizontalwords">
       <div class="columnOneHorizontal">
             <p>Semester: $15</p>
       </div>
