--- a/About.html
+++ b/About.html
@@ -47,7 +47,7 @@
     <h1>About us</h1>
 </div>
 <body>
-    <h2>What is <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx?</a></h2>
+    <!-- <h2>What is <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx?</a></h2> -->
         <iframe
             src="https://www.youtube.com/embed/N-l1xtCMnpw" frameborder="0" allowfullscreen>
         </iframe>
@@ -60,8 +60,8 @@
                 onmouseout="this.src='filler.jpg';"></li></a>
      <a href="Exec_bios.html#bio2"> <li class="execMember"><img src="Sofi.jpg" onmouseover="this.src='Sofi.jpg';"
                 onmouseout="this.src='Sofi.jpg';"></li></a>
-     <a href="Exec_bios.html#bio3"> <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler.jpg';"
-                onmouseout="this.src='filler.jpg';"></li></a>
+     <a href="Exec_bios.html#bio3"> <li class="execMember"><img src="Nihal.jpg"onmouseover="this.src='Nihal.jpg';"
+                onmouseout="this.src='Nihal.jpg';"></li></a>
      <a href="Exec_bios.html#bio4"> <li class="execMember"><img src="Lindsay.jpg"onmouseover="this.src='Lindsay.jpg';"
                 onmouseout="this.src='Lindsay.jpg';"></li></a>
      <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="mitchell.jpg"onmouseover="this.src='mitchell_hover.jpg';"
