--- a/Events.html
+++ b/Events.html
@@ -50,9 +50,8 @@
     <img src="hero.jpg">
   </div>
     <p>We are incredibly proud to announce that our 2016 event sold out in less than two minutes!
-        If you were unable to get tickets and wanted to attend, the live stream to the event will be 
-        on most of our social media. Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/?fref=ts" target="_blank">HERE</a> for the facebook page and livestream during the event.</p>
-        <h2>Check out our speakers <a href="speaker.html">HERE</a>! We will be updating our speakers in upcoming months as talks are finalized.<h2>
+        The live stream to the event will be on most of our social media. Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/?fref=ts" target="_blank">HERE</a> for the facebook page and livestream during the event.</p>
+        <h3>See our speakers <a href="speaker.html">HERE</a>! (This list is being completed as we approach the date)<h3>
   <div class ="pastIMG">
       <h2>2015 - Crafting Global Minds</h2>
     <img src="2015.png">
