--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </iframe></div>
   <br><br>
 <div class="backgroundIMG">
-  <h3><span>In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. These local, self-organised events are branded TEDx, where x = independently organized TED event.
+  <h3><span>In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. Our event is branded TEDx, where x = independently organized TED event.
   </span></h3>
   
   <img src="mainBackIMG.jpg">
