mobile edits, add one more exec

--- a/FavoriteTalks.html
+++ b/FavoriteTalks.html
@@ -57,7 +57,7 @@
         </iframe></div>
 
       <div class="fav_talk"><iframe
-            src="https://www.youtube.com/embed/r9LCwI5iErE" frameborder="0" allowfullscreen>
+            src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen>
         </iframe></div>
         
      <div class="fav_talk"><iframe 
