--- a/About.html
+++ b/About.html
@@ -60,8 +60,8 @@
                 onmouseout="this.src='filler.jpg';"></li></a>
      <a href="Exec_bios.html#bio2"> <li class="execMember"><img src="Sofi.jpg" onmouseover="this.src='Sofi.jpg';"
                 onmouseout="this.src='Sofi.jpg';"></li></a>
-     <a href="Exec_bios.html#bio3"> <li class="execMember"><img src="Nihal.jpg"onmouseover="this.src='Nihal.jpg';"
-                onmouseout="this.src='Nihal.jpg';"></li></a>
+     <a href="Exec_bios.html#bio3"> <li class="execMember"><img src="nihal.jpg"onmouseover="this.src='nihal.jpg';"
+                onmouseout="this.src='nihal.jpg';"></li></a>
      <a href="Exec_bios.html#bio4"> <li class="execMember"><img src="Lindsay.jpg"onmouseover="this.src='Lindsay.jpg';"
                 onmouseout="this.src='Lindsay.jpg';"></li></a>
      <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="mitchell.jpg"onmouseover="this.src='mitchell_hover.jpg';"
