--- a/Events.html
+++ b/Events.html
@@ -57,7 +57,7 @@
     <img src="2015.png">
     <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=642660585873860" target="_blank">
     HERE</a> or <a href="http://www.ted.com/tedx/events/16423" target="_blank"> HERE</a> for more information about our 2015 event.</h3>
-    <h3>See 2015's talks <a href="http://tedxtalks.ted.com/search/?search=TEDxUWMadison">HERE</a>.</h3>
+    <h3>See 2015's talks <a href="http://tedxtalks.ted.com/search/?search=TEDxUWMadison" target="_blank">HERE</a>.</h3>
   </div>
   <br>
   <div class ="pastIMG">
@@ -65,7 +65,7 @@
     <img src="2014.jpg">
     <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=495013167305270" target="_blank">
     HERE</a> for more information about our 2014 event.</h3>
-    <h3>See 2014's talks <a href="http://tedxtalks.ted.com/search/?search=TEDxUWMadison">HERE</a>.</h3>
+    <h3>See 2014's talks <a href="http://tedxtalks.ted.com/search/?search=TEDxUWMadison" target="_blank">HERE</a>.</h3>
   </div>
 </body>
 <footer>
