--- a/Events.html
+++ b/Events.html
@@ -56,7 +56,7 @@
       <h2>2015 - Crafting Global Minds</h2>
     <img src="2015.png">
     <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=642660585873860" target="_blank">
-    HERE</a> or <a href="http://www.ted.com/tedx/events/16423" target="_blank"> HERE</a> for more information about our 2015 event.</h3>
+    HERE</a> to see our event on Facebook or <a href="http://www.ted.com/tedx/events/16423" target="_blank"> HERE</a> to see our event published by TED.</h3>
     <h3>See 2015's talks <a href="http://tedxtalks.ted.com/search/?search=TEDxUWMadison" target="_blank">HERE</a>.</h3>
   </div>
   <br>
