many events changes

--- a/Events.html
+++ b/Events.html
@@ -45,21 +45,80 @@
     <h1>Events</h1>
 </div>
 <body>
-  <div class ="pastIMG">
-    <h2>2016 - Thinking Differently</h2>
+   <ul class="tab">
+  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, '2016')" id="defaultOpen">2016</a></li>
+  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, '2015')">2015</a></li>
+  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, '2014')">2014</a></li>
+</ul>
+<div id="2016" class="tabcontent">
+   <div class ="pastIMG">
+      <h2>2016 - Thinking Differently</h2>
     <img src="hero.jpg">
-  </div>
-    <p>We are incredibly proud to announce that our 2016 event sold out in less than two minutes!
-        The live stream to the event will be on most of our social media. Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/?fref=ts" target="_blank">HERE</a> for the facebook page and livestream during the event.</p>
-        <h3>See our speakers <a href="speaker.html">HERE</a>! (This list is being completed as we approach the date)<h3>
+    </div>
+     <p>Our 2016 event sold out in less than two minutes!
+      </p>
+        <h1>Speakers</h1>
+
+    <center>
+      <ul class="speakerContainer">
+      <li class = "speaker"><img src="Jay.jpg" style="height:400px;">
+        <p>Jay Flores, STEM Ambassador at Rockwell Automation, has a mission: instilling a passion for science, technology, engineering, and mathematics (STEM) in today’s young minds. Jay is masterful in connecting STEM to everyday life and motivating students to become tomorrow’s innovators. </p><br>
+      </li>
+      <li class="speaker"><img src="Sara.jpg" style="height:210px;"><br>
+        <p>Sara L. McKinnon. McKinnon is an Assistant Professor of Rhetoric, Politics and Culture in the Department of Communication Arts at the University of Wisconsin-Madison. Her research and teaching is in the areas of intercultural rhetoric, globalization studies, and gender studies. </p>
+      </li>
+    </ul>
+    <h2>More speakers to come!</h2>
+  </center>
+</div>
+<div id="2015" class="tabcontent">
   <div class ="pastIMG">
       <h2>2015 - Crafting Global Minds</h2>
     <img src="2015.png">
-    <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=642660585873860" target="_blank">
-    HERE</a> to see our event on Facebook or <a href="http://www.ted.com/tedx/events/16423" target="_blank"> HERE</a> to see our event published by TED.</h3>
-    <h3>See 2015's talks <a href="http://tedxtalks.ted.com/search/?search=TEDxUWMadison" target="_blank">HERE</a>.</h3>
   </div>
-  <br>
+     <h1>Speakers</h1>
+
+    <center>
+      <ul class="speakerContainer">
+      <li class = "speaker"><iframe 
+            src="https://www.youtube.com/embed/_wclNhns3_o" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
+        <p>Brooke Evans is an undergraduate student at the University of Wisconsin Madison and a research scholar at the Ronald McNair Post-Baccalaureate Achievement Program.</p><br>
+      </li>
+      <li class="speaker"><iframe 
+            src="https://www.youtube.com/embed/M3YGVsGL7ME" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
+        <p>Eric Larsen is a world famous polar explorer that has traveled to the far corners of the earth. In 2008, Larsen led his first expedition to the South Pole, and is one of few Americans to have skied both the North and South Poles. Larsen frequently gives motivational and educational lectures and is currently working on a documentary about the Save the Poles expedition.</p>
+      </li>
+      <li class="speaker"><iframe 
+            src="https://www.youtube.com/embed/YmYgTy2VkBU" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
+        <p>Jon McKenzie teaches media design and performance theory and direct DesignLab, a media design consultancy in the UW Libraries. His performance research explores post-ideational, transdisciplinary thinking—thinking beyond the book and academy—and the practices and infrastructures that sustain it. He leads the digital humanities initiative.</p>
+      </li>
+       <li class = "speaker"><iframe 
+            src="https://www.youtube.com/embed/Agd8wKjAQRY" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
+        <p>Karen Strier is a biological anthropologist with a specialization in primate behavioral ecology and conservation. For over 33 years, she has coordinated a long-term field study on the critically endangered muriqui monkey in Brazil's Atlantic forest and is deeply committed to conservation.</p><br>
+      </li>
+      <li class="speaker"><iframe 
+            src="https://www.youtube.com/embed/NdEiIpYQDCM" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
+        <p>Patrick Remington is a public health doctor. He worked at the CDC and Wisconsin State Health Department before joining the University of Wisconsin almost 20 years ago. He enjoys teaching, working with students on applied research projects, and communicating public health information in person and through social and mass media.</p>
+      </li>
+        <li class = "speaker"><iframe 
+            src="https://www.youtube.com/embed/UaiZ93oKbLA" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
+        <p>QuHarrison Terry is a junior at the University of Wisconsin, Madison and the founder of VNM USA, an advertising agency that specializes in marketing to millennials. He has worked with many clients including the Milwaukee Bucks, UW-Madison, EatStreet, and more.</p><br>
+      </li>
+      <li class="speaker"><iframe 
+            src="https://www.youtube.com/embed/LPjb2l7xHi4" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
+        <p>Tracey Holloway is a Professor in the Nelson Institute for Environmental Studies at the University of Wisconsin-Madison and leads an air quality research program in the Nelson Institute Center for Sustainability and the Global Environment (SAGE). Her research uses computer models and satellite data to understand links between regional air quality, energy, and climate.</p>
+      </li>
+    </ul>
+  </center>
+</div>
+<div id="2014" class="tabcontent">
   <div class ="pastIMG">
     <h2>2014 - Designing Change</h2>
     <img src="2014.jpg">
@@ -67,6 +126,34 @@
     HERE</a> for more information about our 2014 event.</h3>
     <h3>See 2014's talks <a href="http://tedxtalks.ted.com/search/?search=TEDxUWMadison" target="_blank">HERE</a>.</h3>
   </div>
+</div>
+  <!-- script from http://www.w3schools.com/howto/howto_js_tabs.asp for tab help -->
+<script type="text/javascript">
+function openCity(evt, cityName) {
+    // Declare all variables
+    var i, tabcontent, tablinks;
+
+    // Get all elements with class="tabcontent" and hide them
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+    }
+
+    // Get all elements with class="tablinks" and remove the class "active"
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+
+    // Show the current tab, and add an "active" class to the link that opened the tab
+    document.getElementById(cityName).style.display = "block";
+    evt.currentTarget.className += " active";
+}
+</script>
+<script>
+// Get the element with id="defaultOpen" and click on it
+document.getElementById("defaultOpen").click();
+</script>
 </body>
 <footer>
   <div id="footer">
