--- a/Events.html
+++ b/Events.html
@@ -122,10 +122,38 @@
   <div class ="pastIMG">
     <h2>2014 - Designing Change</h2>
     <img src="2014.jpg">
-    <h3>Click <a href="https://www.facebook.com/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=495013167305270" target="_blank">
-    HERE</a> for more information about our 2014 event.</h3>
-    <h3>See 2014's talks <a href="http://tedxtalks.ted.com/search/?search=TEDxUWMadison" target="_blank">HERE</a>.</h3>
+    <h2>Videos</h2>
   </div>
+
+  <ul class="fav_talks_container">
+       <div class="fav_talk">
+        <iframe 
+            src="https://www.youtube.com/embed/ERjTXo5M0bY" frameborder="0" allowfullscreen>
+        </iframe></div>
+     <div class="fav_talk">
+      <iframe 
+            src="https://www.youtube.com/embed/vluPqu0idJs" frameborder="0" allowfullscreen>
+        </iframe></div>
+
+      <div class="fav_talk">
+        <iframe
+            src="https://www.youtube.com/embed/-2MvS4gm_mo" frameborder="0" allowfullscreen>
+        </iframe></div>
+
+     <div class="fav_talk"><iframe 
+            src="https://www.youtube.com/embed/TH3IQluSFnU" frameborder="0" allowfullscreen>
+        </iframe></div>
+        
+       <div class="fav_talk"><iframe 
+            src="https://www.youtube.com/embed/S-JJU25wHMM" frameborder="0" allowfullscreen>
+        </iframe></div>
+        <div class="fav_talk"><iframe 
+            src="https://www.youtube.com/embed/IimmgiCCKZI" frameborder="0" allowfullscreen>
+        </iframe></div>
+        <div class="fav_talk"><iframe 
+            src="https://www.youtube.com/embed/-HE9SypCzXU" frameborder="0" allowfullscreen>
+        </iframe></div>
+  </ul>
 </div>
   <!-- script from http://www.w3schools.com/howto/howto_js_tabs.asp for tab help -->
 <script type="text/javascript">
