add hover images

--- a/About.html
+++ b/About.html
@@ -58,11 +58,11 @@
     <a href="Exec_bios.html#bio1">
       <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
-     <a href="Exec_bios.html#bio2"> <li class="execMember"><img src="Sofi.jpg" onmouseover="this.src='Sofi.jpg';"
+     <a href="Exec_bios.html#bio2"> <li class="execMember"><img src="Sofi.jpg" onmouseover="this.src='Sofi_hover.jpg';"
                 onmouseout="this.src='Sofi.jpg';"></li></a>
-     <a href="Exec_bios.html#bio3"> <li class="execMember"><img src="Nihal.jpg"onmouseover="this.src='Nihal.jpg';"
+     <a href="Exec_bios.html#bio3"> <li class="execMember"><img src="Nihal.jpg"onmouseover="this.src='Nihal_hover.jpg';"
                 onmouseout="this.src='Nihal.jpg';"></li></a>
-     <a href="Exec_bios.html#bio4"> <li class="execMember"><img src="Lindsay.jpg"onmouseover="this.src='Lindsay.jpg';"
+     <a href="Exec_bios.html#bio4"> <li class="execMember"><img src="Lindsay.jpg"onmouseover="this.src='Lindsay_hover.jpg';"
                 onmouseout="this.src='Lindsay.jpg';"></li></a>
      <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="mitchell.jpg"onmouseover="this.src='mitchell_hover.jpg';"
                 onmouseout="this.src='mitchell.jpg';"></li></a>
