--- a/About.html
+++ b/About.html
@@ -66,7 +66,9 @@
                 onmouseout="this.src='Lindsay.jpg';"></li></a>
      <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="mitchell.jpg"onmouseover="this.src='mitchell_hover.jpg';"
                 onmouseout="this.src='mitchell.jpg';"></li></a>
-     <a href="Exec_bios.html#bio6"><li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
+      <a href="Exec_bios.html#bio6"><li class="execMember"><img src="Zahra.jpg"onmouseover="this.src='Zahra.jpg';"
+                onmouseout="this.src='Zahra.jpg';"></li></a>
+     <a href="Exec_bios.html#bio7"><li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
   </ul>
 <!--     <h2>About TEDx, x = independently organized event</h2>
