--- a/Exec_bios.html
+++ b/Exec_bios.html
@@ -57,7 +57,9 @@
       <p>Lindsay joined TEDxUWMadison as a freshman, and has been a member of the executive board since her sophomore year. She was fortunate enough to attend TED Talks Live: Education Revolution in New York City fall of 2015 with Curator and President, Sofi LaLonde. Lindsay loves the global aspect of TED, and as an avid traveller herself, is always intrigued by the advances and adventures people are having around the world.</p><br></a>
       <a name="bio5"><img src="mitchell.jpg" height="300" width="300"><br>
       <p>Mitchell first learned about TEDxUWMadison at the student org fair freshman year and has been in love ever since. His favorite TED Talk is "Why city flags may be the worst-designed thing you've never noticed" by Roman Mars. Mitchell enjoys being outside and is very active year round. During the winter he enjoys cross country and downhill skiing. Mitchell is also a member of Euchre club. His career goal is to be an Epidemiologist.</p><br></a>
-      <a name="bio6"><img src="filler.jpg" height="300" width="300"><br>
+      <a name="bio6"><img src="Zahra.jpg" height="300" width="300"><br>
+      <p>Zahra is a junior here at the UW-Madison, and has been a member of the TEDx ever since her freshman year. As a marketing student, she wants to pursue to a career in digital marketing and/or advertisement. She hopes to use her marketing skills around the world for the greater good. In addition to watching TEDx videos during her free time, she loves reading a good book, baking, Instagramming anything and everything, and discussing good tv shows and movies.</p><br></a>
+      <a name="bio7"><img src="filler.jpg" height="300" width="300"><br>
       <p>Nick joined Tedx as a Sophomore looking to get involved in a group where he could provide a substantial impact as a general member. As an avid listener of Ted talks, Tedx was a perfect fit! When not controlling the finance activities for Tedx, you will probably find Nick watching or playing sports, more specifically, the Packers and Bucks.</p><br></a>
   </center>
   </div>
