added speaker bios

--- a/Events.html
+++ b/Events.html
@@ -67,6 +67,22 @@
       <li class="speaker"><img src="Sara.jpg" style="height:210px;"><br>
         <p>Sara L. McKinnon. McKinnon is an Assistant Professor of Rhetoric, Politics and Culture in the Department of Communication Arts at the University of Wisconsin-Madison. Her research and teaching is in the areas of intercultural rhetoric, globalization studies, and gender studies. </p>
       </li>
+      <li class="speaker"><img src="ethan.png" style="height:210px;"><br>
+        <p>Ethan Young is a Founder and President of Insight Wisconsin, the premier organization for “Student Inventors” on the UW campus. Members work in interdisciplinary project teams on structured design projects proposed by researchers, corporate partners, and members themselves. Concurrently, Ethan is a sophomore Chemical Engineering student at the University of Wisconsin-Madison.</p>
+      </li>
+      <li class="speaker"><img src="jones.jpg" style="height:210px;"><br>
+        <p>Corinne Jones, MS, CCC-SLP, is a PhD candidate at the University of Wisconsin-Madison with the Neuroscience Training Program and Department of Communication Sciences & Disorders. She is a licensed and certified speech-language pathologist with a specific focus in evaluation of swallowing disorders, and her research examines early, sub-clinical changes in voice and swallowing function in patients with Parkinson disease.</p>
+      </li>
+      <li class="speaker"><img src="ed.png" style="height:210px;"><br>
+        <p>Ed Maxwell applies his love for and knowledge of learning to everything he does, including his personal practice of mindfulness. After earning his MBA from the Wisconsin School of Business, he combined his passion for teaching, business, and mindfulness by founding Third Left Wellness, a company that offers onsite mindfulness training to employees. His goal is to apply mindfulness to the most pressing needs our organizations face, including how to build more inclusive workplaces.</p>
+      </li>
+      <li class="speaker"><img src="sangita.jpg" style="height:210px;"><br>
+        <p>Sangita Kasturi brings more than 15 years of global expertise to help organizations successfully grow their diverse talent. As the CEO of Action Inclusion, she helps develop insights and practices to overcome issues of conscious and unconscious bias and build workplace inclusion. Solutions are offered through consultations, seminars, workshops and coaching.</p>
+      </li>
+      <!-- TED HARRO. WAITING FOR BIO
+      <li class="speaker"><img src="ted_harro.jpg" style="height:210px;"><br>
+        <p></p>
+      </li> -->
     </ul>
     <h2>More speakers to come!</h2>
   </center>
