change about this site

--- a/About.html
+++ b/About.html
@@ -87,22 +87,15 @@
       Follow TED on <a href="http://twitter.com/TEDTalks" target="_blank">Twitter</a>, or on <a href="http://www.facebook.com/TED" target="_blank">Facebook</a>.
     </p>
     </div>
-    <h2>About This Site</h2>
-    <p>This site was designed and created by Jessica Tang and Aaron Grode, both members of TEDxUWMadison.
-        Members of TEDxUWMadison since 2015, they now are co-leads of the web team that created the site and
-        maintains it regularly. If you would like to contact either Jessica or Aaron, send an email by
-        clicking <a href="mailto:grode2@wisc.edu?Subject=QuestionsOnWeb" target="_top">HERE</a>.</p>  
+  </div>
 
-          <div class="twoColumnFlexHorizontal">
-            <div class="columnOneHorizontal">
-              <a href="https://www.linkedin.com/in/jessrosetang" target="_blank"><img src="filler2.jpg" onmouseover="this.src='filler2_hover.jpg';"
-                onmouseout="this.src='filler2.jpg';"></a>
-            </div>
-            <div class="columnTwoHorizontal">
-              <a href="https://www.linkedin.com/in/aarongrode" target="_blank"><img src="filler.jpg" onmouseover="this.src='filler_hover.jpg';"
-                onmouseout="this.src='filler.jpg';"></a>
-            </div>
-          </div>
+  <div class="contactWeb">
+    <div class ="leftWeb">
+      <h3>Questions about the site?</h3>
+    </div>
+    <div class="rightWeb">
+      <a href="">Contact Us</a>
+    </div>
   </div>
 </body>
 <footer>
