footer edits. wait on comment from jess

--- a/About.html
+++ b/About.html
@@ -66,7 +66,7 @@
                 onmouseout="this.src='Lindsay.jpg';"></li></a>
      <a href="Exec_bios.html#bio5"> <li class="execMember"><img src="mitchell.jpg"onmouseover="this.src='mitchell_hover.jpg';"
                 onmouseout="this.src='mitchell.jpg';"></li></a>
-      <a href="Exec_bios.html#bio6"><li class="execMember"><img src="Zahra.jpg"onmouseover="this.src='Zahra.jpg';"
+      <a href="Exec_bios.html#bio6"><li class="execMember"><img src="Zahra.jpg"onmouseover="this.src='Zahra_hover.jpg';"
                 onmouseout="this.src='Zahra.jpg';"></li></a>
      <a href="Exec_bios.html#bio7"><li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
                 onmouseout="this.src='filler.jpg';"></li></a>
@@ -94,9 +94,10 @@
       <h3>Questions about the site?</h3>
     </div>
     <div class="rightWeb">
-      <a href="">Contact Us</a>
+       <a href="mailto:grode2@wisc.edu?Subject=TEDxQuestions" target="_top">Contact Us</a>
     </div>
   </div>
+
 </body>
 <footer>
   <div id="footer">
@@ -121,9 +122,9 @@
 
             </div>
           <div class="footerListWords">
-            <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx</a>
-            <a href="Join.html">Become a member</a>
-            <a href="http://www.ted.com/" target="_blank">TED</a>
+            <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">Home</a>
+            <a href="Join.html">Join</a>
+            <a href="http://www.ted.com/" target="_blank">Events</a>
           </div>
         </div>
         <div class="columnTwo">
