--- a/Join.html
+++ b/Join.html
@@ -48,7 +48,7 @@
 </div>
 <body>
   <div id ="contactImage">
-     <h2>Don't miss a thing! <a href="mailto:grode2@wisc.edu?Subject=Questions!" target="_top">Email us</a> to join the list. </h2>
+     <h2>Don't miss a thing! <a href="mailto:smlalonde@wisc.edu?Subject=Questions!" target="_top">Email us</a> to join the list. </h2>
     <img src="tedExec.jpg">
   </div>
   <div class="join">
