footer edits, and about contact change

--- a/Join.html
+++ b/Join.html
@@ -97,10 +97,10 @@
               onmouseover="this.src='snapchat_grey.png';" onmouseout="this.src='snapchat.png';"></a>
 
             </div>
-          <div class="footerListWords">
-            <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx</a>
+            <div class="footerListWords">
+            <!-- <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">Home</a> -->
             <a href="Join.html">Become a member</a>
-            <a href="http://www.ted.com/" target="_blank">TED</a>
+            <!-- <a href="http://www.ted.com/" target="_blank">Events</a> -->
           </div>
         </div>
         <div class="columnTwo">
