--- a/About.html
+++ b/About.html
@@ -122,9 +122,9 @@
 
             </div>
           <div class="footerListWords">
-            <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">Home</a>
-            <a href="Join.html">Join</a>
-            <a href="http://www.ted.com/" target="_blank">Events</a>
+            <!-- <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">Home</a> -->
+            <a href="Join.html">Become a member</a>
+            <!-- <a href="http://www.ted.com/" target="_blank">Events</a> -->
           </div>
         </div>
         <div class="columnTwo">
