--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 
 <div id="hero">
-    <a href="https://win.wisc.edu/organization/tedxuwmadison/calendar/details/990128" target="_blank"><img src="hero.jpg"></a>
+    <img src="hero.jpg">
     <h1>TEDxUWMadison</h1>
 </div>
 <body>
