added exec bios. Need to edit hover tomorrow

--- a/About.html
+++ b/About.html
@@ -56,8 +56,8 @@
     <h2>Click <a href="Exec_bios.html">HERE</a> to learn more about the exec board!</h2>
     <ul class="execContainer">
     <a href="Exec_bios.html#bio1">
-      <li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
-                onmouseout="this.src='filler.jpg';"></li></a>
+      <li class="execMember"><img src="tom.png"onmouseover="this.src='tom.png';"
+                onmouseout="this.src='tom.png';"></li></a>
      <a href="Exec_bios.html#bio2"> <li class="execMember"><img src="Sofi.jpg" onmouseover="this.src='Sofi_hover.jpg';"
                 onmouseout="this.src='Sofi.jpg';"></li></a>
      <a href="Exec_bios.html#bio3"> <li class="execMember"><img src="Nihal.jpg"onmouseover="this.src='Nihal_hover.jpg';"
@@ -68,8 +68,8 @@
                 onmouseout="this.src='mitchell.jpg';"></li></a>
       <a href="Exec_bios.html#bio6"><li class="execMember"><img src="Zahra.jpg"onmouseover="this.src='Zahra_hover.jpg';"
                 onmouseout="this.src='Zahra.jpg';"></li></a>
-     <a href="Exec_bios.html#bio7"><li class="execMember"><img src="filler.jpg"onmouseover="this.src='filler_hover.jpg';"
-                onmouseout="this.src='filler.jpg';"></li></a>
+     <a href="Exec_bios.html#bio7"><li class="execMember"><img src="nick.jpg"onmouseover="this.src='nick.jpg';"
+                onmouseout="this.src='nick.jpg';"></li></a>
   </ul>
 <!--     <h2>About TEDx, x = independently organized event</h2>
     <p>In the spirit of ideas worth spreading, TEDx is a program of local, 
