--- a/Exec_bios.html
+++ b/Exec_bios.html
@@ -47,7 +47,7 @@
   <div class ="exec_bios_flex">
     <h1>Meet the exec board</h1>
     <center>
-      <a name="bio1"><img src="filler.jpg" height="300" width="300"><br>
+      <a name="bio1"><img src="tom.png" height="300" width="300"><br>
       <p>Speaker Liaison</p>
       <p>Thomas is a Sophomore here at UW Madison and this is his second year in TEDx and his second year as Speaker Liaison. Outside of school and TEDx, Thomas fights for the Taekwondo team, is involved with the Economic Student Association and Investment Banking club. With his free time, Thomas enjoys working out and reading historical novels because he is an uber nerd.</p><br></a>
       <a name="bio2"><img src="Sofi.jpg" height="300" width="300"><br>
@@ -65,7 +65,7 @@
       <a name="bio6"><img src="Zahra.jpg" height="300" width="300"><br>
         <p>Marketing Director</p>
       <p>Zahra is a junior here at the UW-Madison, and has been a member of the TEDx ever since her freshman year. As a marketing student, she wants to pursue to a career in digital marketing and/or advertisement. She hopes to use her marketing skills around the world for the greater good. In addition to watching TEDx videos during her free time, she loves reading a good book, baking, Instagramming anything and everything, and discussing good tv shows and movies.</p><br></a>
-      <a name="bio7"><img src="filler.jpg" height="300" width="300"><br>
+      <a name="bio7"><img src="nick.jpg" height="300" width="300"><br>
         <p>Financial Committee Chair</p>
       <p>Nick joined TEDx as a Sophomore looking to get involved in a group where he could provide a substantial impact as a general member. As an avid listener of Ted talks, TEDx was a perfect fit! When not controlling the finance activities for TEDx, you will probably find Nick watching or playing sports, more specifically, the Packers and Bucks.</p><br></a>
   </center>
