add hover on tom and nick

--- a/Events.html
+++ b/Events.html
@@ -55,8 +55,7 @@
       <h2>2016 - Thinking Differently</h2>
     <img src="hero.jpg">
     </div>
-     <p>Our 2016 event sold out in less than two minutes!
-      </p>
+   <p>Our 2016 event sold out in less than two minutes!</p>
         <h1>Speakers</h1>
 
     <center>
@@ -74,7 +73,7 @@
         <p>Corinne Jones, MS, CCC-SLP, is a PhD candidate at the University of Wisconsin-Madison with the Neuroscience Training Program and Department of Communication Sciences & Disorders. She is a licensed and certified speech-language pathologist with a specific focus in evaluation of swallowing disorders, and her research examines early, sub-clinical changes in voice and swallowing function in patients with Parkinson disease.</p>
       </li>
       <li class="speaker"><img src="ed.png" style="height:210px;"><br>
-        <p>Ed Maxwell applies his love for and knowledge of learning to everything he does, including his personal practice of mindfulness. After earning his MBA from the Wisconsin School of Business, he combined his passion for teaching, business, and mindfulness by founding Third Left Wellness, a company that offers onsite mindfulness training to employees. His goal is to apply mindfulness to the most pressing needs our organizations face, including how to build more inclusive workplaces.</p>
+        <p>Ed Maxwell applies his love for and knowledge of learning to everything he does, including his personal practice of mindfulness. After earning his MBA from the Wisconsin School of Business, he founded Third Left Wellness, a company that offers onsite mindfulness training to employees. His goal is to apply mindfulness to the most pressing needs our organizations face.</p>
       </li>
       <li class="speaker"><img src="sangita.jpg" style="height:210px;"><br>
         <p>Sangita Kasturi brings more than 15 years of global expertise to help organizations successfully grow their diverse talent. As the CEO of Action Inclusion, she helps develop insights and practices to overcome issues of conscious and unconscious bias and build workplace inclusion. Solutions are offered through consultations, seminars, workshops and coaching.</p>
@@ -84,7 +83,7 @@
         <p></p>
       </li> -->
     </ul>
-    <h2>More speakers to come!</h2>
+    <!-- <h2>More speakers to come!</h2> -->
   </center>
 </div>
 <div id="2015" class="tabcontent">
