--- a/About.html
+++ b/About.html
@@ -70,6 +70,10 @@
                 onmouseout="this.src='Zahra.jpg';"></li></a>
      <a href="Exec_bios.html#bio7"><li class="execMember"><img src="nick.jpg"onmouseover="this.src='nick_hover.jpg';"
                 onmouseout="this.src='nick.jpg';"></li></a>
+              <!--    <a href="Exec_bios.html#bio7"><li class="execMember"><img src="nick.jpg"onmouseover="this.src='nick_hover.jpg';"
+                onmouseout="this.src='nick.jpg';"></li></a>
+                 <a href="Exec_bios.html#bio7"><li class="execMember"><img src="nick.jpg"onmouseover="this.src='nick_hover.jpg';"
+                onmouseout="this.src='nick.jpg';"></li></a> -->
   </ul>
 <!--     <h2>About TEDx, x = independently organized event</h2>
     <p>In the spirit of ideas worth spreading, TEDx is a program of local, 
