added exec member

--- a/About.html
+++ b/About.html
@@ -70,6 +70,9 @@
                 onmouseout="this.src='Zahra.jpg';"></li></a>
      <a href="Exec_bios.html#bio7"><li class="execMember"><img src="nick.jpg"onmouseover="this.src='nick_hover.jpg';"
                 onmouseout="this.src='nick.jpg';"></li></a>
+      <a href="Exec_bios.html#bio8">
+      <li class="execMember"><img src="bridget.jpg"onmouseover="this.src='bridget.jpg';"
+                onmouseout="this.src='bridget.jpg';"></li></a>
               <!--    <a href="Exec_bios.html#bio7"><li class="execMember"><img src="nick.jpg"onmouseover="this.src='nick_hover.jpg';"
                 onmouseout="this.src='nick.jpg';"></li></a>
                  <a href="Exec_bios.html#bio7"><li class="execMember"><img src="nick.jpg"onmouseover="this.src='nick_hover.jpg';"
