final exec bios added

--- a/Exec_bios.html
+++ b/Exec_bios.html
@@ -71,6 +71,10 @@
       <a name="bio8"><img src="bridget.jpg" height="300" width="300"><br>
       <p>Marketing Commitee</p>
       <p>Bridget is a junior at UW-Madison and has been involved with TEDx since her sophomore year. Her favorite thing about TEDx is getting to see the event come together with all of the amazing speakers. Bridget is a Journalism and Strategic Communications major from Minnesota. When she's not doing homework or at TEDx she enjoys skiing, hiking and hanging out with friends.</p><br></a>
+
+      <a name="bio9"><img src="shelby.jpg" height="300" width="300"><br>
+      <p>Graphic Designer</p>
+      <p>Shelby is a sophomore here at the UW-Madison, and has been a member of the TEDx ever since her freshman year. As Creative Director, she enjoys employing her artistic background to implement innovative design and branding for the TEDx group. When she’s not designing, Shelby enjoys disco, bulk food sections of grocery stores, and sometimes art.</p><br></a>
   </center>
   </div>
 </body>
