--- a/About.html
+++ b/About.html
@@ -73,6 +73,9 @@
       <a href="Exec_bios.html#bio8">
       <li class="execMember"><img src="bridget.jpg"onmouseover="this.src='bridget.jpg';"
                 onmouseout="this.src='bridget.jpg';"></li></a>
+       <a href="Exec_bios.html#bio9">
+      <li class="execMember"><img src="shelby.jpg"onmouseover="this.src='shelby.jpg';"
+                onmouseout="this.src='shelby.jpg';"></li></a>
               <!--    <a href="Exec_bios.html#bio7"><li class="execMember"><img src="nick.jpg"onmouseover="this.src='nick_hover.jpg';"
                 onmouseout="this.src='nick.jpg';"></li></a>
                  <a href="Exec_bios.html#bio7"><li class="execMember"><img src="nick.jpg"onmouseover="this.src='nick_hover.jpg';"
