--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <link href="Format.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" type="text/css"
-          href="https://fonts.googleapis.com/css?family=Lato">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
 <head>
  <script>
