--- a/About.html
+++ b/About.html
@@ -70,10 +70,10 @@
      <a href="Exec_bios.html#bio7"><li class="execMember"><img src="nick.jpg"onmouseover="this.src='nick_hover.jpg';"
                 onmouseout="this.src='nick.jpg';"></li></a>
       <a href="Exec_bios.html#bio8">
-      <li class="execMember"><img src="bridget.jpg"onmouseover="this.src='bridget.jpg';"
-                onmouseout="this.src='bridget.jpg';"></li></a>
+      <li class="execMember"><img src="bridget.png"onmouseover="this.src='bridget_hover.png';"
+                onmouseout="this.src='bridget.png';"></li></a>
        <a href="Exec_bios.html#bio9">
-      <li class="execMember"><img src="shelby.jpg"onmouseover="this.src='shelby.jpg';"
+      <li class="execMember"><img src="shelby.jpg"onmouseover="this.src='shelby_hover.jpg';"
                 onmouseout="this.src='shelby.jpg';"></li></a>
               <!--    <a href="Exec_bios.html#bio7"><li class="execMember"><img src="nick.jpg"onmouseover="this.src='nick_hover.jpg';"
                 onmouseout="this.src='nick.jpg';"></li></a>
