--- a/Exec_bios.html
+++ b/Exec_bios.html
@@ -67,7 +67,7 @@
       <a name="bio7"><img src="nick.jpg" height="300" width="300"><br>
         <p>Financial Committee Chair</p>
       <p>Nick joined TEDx as a Sophomore looking to get involved in a group where he could provide a substantial impact as a general member. As an avid listener of Ted talks, TEDx was a perfect fit! When not controlling the finance activities for TEDx, you will probably find Nick watching or playing sports, more specifically, the Packers and Bucks.</p><br></a>
-      <a name="bio8"><img src="bridget.jpg" height="300" width="300"><br>
+      <a name="bio8"><img src="bridget.png" height="300" width="300"><br>
       <p>Marketing Commitee</p>
       <p>Bridget is a junior at UW-Madison and has been involved with TEDx since her sophomore year. Her favorite thing about TEDx is getting to see the event come together with all of the amazing speakers. Bridget is a Journalism and Strategic Communications major from Minnesota. When she's not doing homework or at TEDx she enjoys skiing, hiking and hanging out with friends.</p><br></a>
 
