--- a/About.html
+++ b/About.html
@@ -107,6 +107,10 @@
     </div>
   </div>
 
+  <center><a href="" target="_blank">
+                     <img src="logo.png" width="85" height="85" style="text-decoration:none;"onmouseover="this.src='logo_hover.png';" onmouseout="this.src='logo.png';" />
+                         </a></center>
+
 </body>
 <footer>
   <div id="footer">
